--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "gulp",
-    "build": "gulp build"
+    "build": "npm run build"
   },
   "dependencies": {
     "browser-sync": "^2.27.10",
