--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "start": "node theme/js/script.js"
   },
   "dependencies": {
     "browser-sync": "^2.27.10",
