added jquery to dependencies

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "node": "^18.7.0",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "jQuery": "3.5.1"
   }
 }
