--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp build",
-    "start": "node theme/js/script.js"
+    "start": "gulp"
   },
   "dependencies": {
     "browser-sync": "^2.27.10",
@@ -20,6 +20,5 @@
     "gulp-sourcemaps": "^3.0.0",
     "node": "^18.7.0",
     "sass": "^1.52.3",
-    "jQuery": "3.5.1"
   }
 }
