--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp build",
-    "start": "npm run build"
+    "start": "npm run build",
+    "heroku-postbuild": "gulp build --prod"
   },
   "dependencies": {
     "browser-sync": "^2.27.10",
