--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp build",
-    "start": "node gulpfile.js"
+    "start": "node run build",
+    "heroku-postbuild": "node theme/js/script.js"
 
   },
   "dependencies": {
