--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp build",
-    "start": "node source/js/script.js"
+    "start": "node source/js/script.js",
+    "postinstall": "gulp default"
 
   },
   "dependencies": {
