--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp build",
-    "start": "node app",
-    "postinstall": "gulp default"
+    "start": "node server.js"
 
   },
   "dependencies": {
     "browser-sync": "^2.27.10",
+    "express": "^4.18.1",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.1.0",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-file-include": "^2.3.0",
     "gulp-header-comment": "^0.10.0",
     "gulp-rimraf": "^1.0.0",
@@ -22,5 +22,6 @@
     "gulp-sourcemaps": "^3.0.0",
     "node": "^18.7.0",
     "sass": "^1.52.3"
+
   }
 }
